# intern-project

./: .gitignore  README.md
hsi_avionic/: CMakeLists.txt  README.md
hsi_avionic/include/compas/: CompasRenderer.hpp
hsi_avionic/include/config/: AppConfig.hpp
hsi_avionic/include/core/: ApplicationState.hpp  InputHandler.hpp  RenderEngine.hpp
hsi_avionic/include/data/: HsiData.hpp
hsi_avionic/include/gfx/: HsiRenderer.hpp  Shader.hpp  TextRenderer.hpp  TtfTextRenderer.hpp
hsi_avionic/include/ui/: HsiUiRenderer.hpp
hsi_avionic/lib/glad/include/glad/: glad.h
hsi_avionic/lib/glad/src/: glad.c
hsi_avionic/src/: CompasRenderer.cpp  HsiRenderer.cpp  HsiUiRenderer.cpp  TextRenderer.cpp  TtfTextRenderer.cpp  main.cpp
hsi_avionic/src/compas/: CompasRenderer.cpp
hsi_avionic/src/core/: InputHandler.cpp  RenderEngine.cpp
hsi_avionic/src/gfx/: HsiRenderer.cpp  Shader.cpp  TtfTextRenderer.cpp
hsi_avionic/src/ui/: HsiUiRenderer.cpp
ogl_triangle2d/: CMakeLists.txt  README.md
ogl_triangle2d/include/core/: Log.hpp  Window.hpp
ogl_triangle2d/src/app/: TriangleApp.cpp  main.cpp
ogl_triangle2d/src/core/: Log.cpp  Window.cpp
